--- a/Viewer/Setting/Base.lproj/Setting.storyboard
+++ b/Viewer/Setting/Base.lproj/Setting.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v1.0.2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iRc-JN-TiZ">
-                                <rect key="frame" x="278" y="549.5" width="44" height="20.5"/>
+                                <rect key="frame" x="278" y="549" width="44" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.090196078431372548" green="0.3411764705882353" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -29,20 +29,42 @@
                                 <color key="textColor" red="0.090196078431372548" green="0.3411764705882353" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Uf-6s-PmP">
-                                <rect key="frame" x="220" y="433" width="160" height="30"/>
-                                <state key="normal" title="Sponsorship Developer"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="1Sx-6D-1Qa">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SettingTableViewCellIdentifier" textLabel="vRP-jd-Z78" style="IBUITableViewCellStyleDefault" id="Zae-xW-3SB">
+                                        <rect key="frame" x="0.0" y="49.5" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Zae-xW-3SB" id="eif-sJ-wBp">
+                                            <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="vRP-jd-Z78">
+                                                    <rect key="frame" x="15" y="0.0" width="550" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <action selector="sponsorship:" destination="9hj-jX-woe" eventType="touchUpInside" id="6zg-BJ-xGw"/>
+                                    <outlet property="dataSource" destination="9hj-jX-woe" id="snN-cU-CVk"/>
+                                    <outlet property="delegate" destination="9hj-jX-woe" id="Kmx-E6-EXe"/>
                                 </connections>
-                            </button>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="iRc-JN-TiZ" firstAttribute="top" secondItem="3Uf-6s-PmP" secondAttribute="bottom" constant="86" id="4KG-R2-RdS"/>
+                            <constraint firstItem="1Sx-6D-1Qa" firstAttribute="leading" secondItem="iIT-nb-Tqh" secondAttribute="leading" id="3Vn-gH-ijz"/>
                             <constraint firstItem="iRc-JN-TiZ" firstAttribute="centerX" secondItem="iIT-nb-Tqh" secondAttribute="centerX" id="6ut-Zd-Dkg"/>
                             <constraint firstItem="809-3G-pIg" firstAttribute="top" secondItem="iRc-JN-TiZ" secondAttribute="bottom" constant="30" id="8o8-yu-Y3D"/>
-                            <constraint firstItem="3Uf-6s-PmP" firstAttribute="centerX" secondItem="iIT-nb-Tqh" secondAttribute="centerX" id="cz0-tC-rkw"/>
+                            <constraint firstItem="809-3G-pIg" firstAttribute="top" secondItem="1Sx-6D-1Qa" secondAttribute="bottom" id="L5c-vz-kBT"/>
+                            <constraint firstAttribute="trailing" secondItem="1Sx-6D-1Qa" secondAttribute="trailing" id="YfU-1y-0xp"/>
+                            <constraint firstItem="1Sx-6D-1Qa" firstAttribute="top" secondItem="Orw-OM-PoQ" secondAttribute="bottom" id="a2A-Uw-oRy"/>
                             <constraint firstItem="hbs-J6-mYz" firstAttribute="centerX" secondItem="iIT-nb-Tqh" secondAttribute="centerX" id="gRW-bD-8kr"/>
                             <constraint firstItem="hbs-J6-mYz" firstAttribute="top" secondItem="Orw-OM-PoQ" secondAttribute="bottom" constant="66" id="w31-5R-zQ4"/>
                         </constraints>
@@ -54,10 +76,129 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="Evo-Be-VAW" kind="show" identifier="showTheme" id="jhH-mf-sJi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BuF-4H-CxS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="891" y="119"/>
+        </scene>
+        <!--Theme View Controller-->
+        <scene sceneID="FwA-xq-XIf">
+            <objects>
+                <viewController storyboardIdentifier="ThemeViewController" id="Evo-Be-VAW" customClass="ThemeViewController" customModule="Viewer" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yE9-ak-YEi"/>
+                        <viewControllerLayoutGuide type="bottom" id="Jwc-o6-tM4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Jd5-E6-DxG">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="x9P-Po-11C">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ScriptTableViewCellIdentifier" textLabel="53W-qF-EeA" style="IBUITableViewCellStyleDefault" id="aV0-hg-IeS">
+                                        <rect key="frame" x="0.0" y="93.5" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aV0-hg-IeS" id="fr7-vB-80p">
+                                            <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="53W-qF-EeA">
+                                                    <rect key="frame" x="15" y="0.0" width="550" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Evo-Be-VAW" id="XYE-jC-iFf"/>
+                                    <outlet property="delegate" destination="Evo-Be-VAW" id="l0N-6g-M1D"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.78414888900000002" blue="0.19546029619999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="x9P-Po-11C" secondAttribute="trailing" id="HDq-WU-6I9"/>
+                            <constraint firstItem="x9P-Po-11C" firstAttribute="leading" secondItem="Jd5-E6-DxG" secondAttribute="leading" id="OOC-XQ-1UE"/>
+                            <constraint firstItem="Jwc-o6-tM4" firstAttribute="top" secondItem="x9P-Po-11C" secondAttribute="bottom" id="WmD-wr-UwJ"/>
+                            <constraint firstItem="x9P-Po-11C" firstAttribute="top" secondItem="Jd5-E6-DxG" secondAttribute="top" id="w8X-ag-FGJ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Whm-cb-1CT"/>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="x9P-Po-11C" id="x4G-Dh-JhM"/>
+                        <segue destination="SNZ-Zs-rod" kind="show" identifier="showStyle" id="iJB-gO-Y7F"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="45h-wr-r0H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1551" y="119"/>
+        </scene>
+        <!--Style View Controller-->
+        <scene sceneID="kwy-C1-eLL">
+            <objects>
+                <viewController id="SNZ-Zs-rod" customClass="StyleViewController" customModule="Viewer" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="J20-VW-aKU"/>
+                        <viewControllerLayoutGuide type="bottom" id="pVp-wG-PtN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Nku-0i-nAF">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="5U6-TC-q4d">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="StyleTableViewCellIdentifier" textLabel="VNH-g4-eN4" style="IBUITableViewCellStyleDefault" id="wdD-62-mW4">
+                                        <rect key="frame" x="0.0" y="93.5" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wdD-62-mW4" id="WQg-LR-mQw">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="VNH-g4-eN4">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="SNZ-Zs-rod" id="2sq-Pk-6y8"/>
+                                    <outlet property="delegate" destination="SNZ-Zs-rod" id="15G-2J-Iai"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5U6-TC-q4d" firstAttribute="leading" secondItem="Nku-0i-nAF" secondAttribute="leading" id="KYy-WO-oYt"/>
+                            <constraint firstItem="pVp-wG-PtN" firstAttribute="top" secondItem="5U6-TC-q4d" secondAttribute="bottom" id="Qd6-u2-dSf"/>
+                            <constraint firstAttribute="trailing" secondItem="5U6-TC-q4d" secondAttribute="trailing" id="WG2-0Y-EfJ"/>
+                            <constraint firstItem="5U6-TC-q4d" firstAttribute="top" secondItem="Nku-0i-nAF" secondAttribute="top" id="eId-KT-EhH"/>
+                        </constraints>
+                    </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="5U6-TC-q4d" id="Mmh-ju-Y6j"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uNv-QZ-43p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2242" y="119"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Lc8-NL-Xnb">
