--- a/Viewer/Base.lproj/Main.storyboard
+++ b/Viewer/Base.lproj/Main.storyboard
@@ -41,7 +41,8 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="7BO-sn-Woh" firstAttribute="centerX" secondItem="G9S-D3-TeG" secondAttribute="centerX" id="J13-nH-67T"/>
                             <constraint firstItem="Nhl-NO-SBc" firstAttribute="centerX" secondItem="7BO-sn-Woh" secondAttribute="centerX" id="QGC-Kh-haq"/>
@@ -52,6 +53,11 @@
                             <constraint firstItem="7BO-sn-Woh" firstAttribute="centerY" secondItem="G9S-D3-TeG" secondAttribute="centerY" id="wyq-XQ-Xaz"/>
                             <constraint firstItem="Nhl-NO-SBc" firstAttribute="height" secondItem="7BO-sn-Woh" secondAttribute="height" id="xs0-Yo-Ai5"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="S3f-lg-i2X" appends="YES" id="6eU-Ja-Vrs"/>
+                            <outletCollection property="gestureRecognizers" destination="z8h-gi-HJ7" appends="YES" id="vSt-H0-1Fx"/>
+                            <outletCollection property="gestureRecognizers" destination="7o4-QA-585" appends="YES" id="2xD-io-593"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="MLl-6V-q6Z">
                         <nil key="title"/>
@@ -87,6 +93,21 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="S3f-lg-i2X">
+                    <connections>
+                        <action selector="handleLongPress:" destination="BYZ-38-t0r" id="47I-6h-eOz"/>
+                    </connections>
+                </pongPressGestureRecognizer>
+                <swipeGestureRecognizer direction="up" id="z8h-gi-HJ7">
+                    <connections>
+                        <action selector="handleSwipeUp:" destination="BYZ-38-t0r" id="8d5-ZI-lUS"/>
+                    </connections>
+                </swipeGestureRecognizer>
+                <swipeGestureRecognizer direction="down" id="7o4-QA-585">
+                    <connections>
+                        <action selector="handleSwipDown:" destination="BYZ-38-t0r" id="Xfe-D7-sEn"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1538" y="-365"/>
         </scene>
