--- a/Viewer/Setting/Base.lproj/Setting.storyboard
+++ b/Viewer/Setting/Base.lproj/Setting.storyboard
@@ -93,8 +93,8 @@
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yOX-gS-AkI">
-                                <rect key="frame" x="238.5" y="471" width="123" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yOX-gS-AkI">
+                                <rect key="frame" x="226.5" y="471" width="147" height="30"/>
                                 <state key="normal" title="📧 Mail To Developer">
                                     <color key="titleColor" red="0.090196078431372548" green="0.3411764705882353" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -161,7 +161,6 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.78414888900000002" blue="0.19546029619999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="x9P-Po-11C" secondAttribute="trailing" id="HDq-WU-6I9"/>
                             <constraint firstItem="x9P-Po-11C" firstAttribute="leading" secondItem="Jd5-E6-DxG" secondAttribute="leading" id="OOC-XQ-1UE"/>
